A1/poohj.jj
options {
  JAVA_UNICODE_ESCAPE = true;
}

PARSER_BEGIN(PoohJ)
  public class PoohJ {}
PARSER_END(PoohJ)


SKIP : /* WHITE SPACE */
{
  " "
| "\t"
| "\n"
| "\r"
| "\f"
}

SPECIAL_TOKEN : /* COMMENTS */
{
  <SINGLE_LINE_COMMENT: "//" (~["\n","\r"])* ("\n"|"\r"|"\r\n")>
| <FORMAL_COMMENT: "/**" (~["*"])* "*" ("*" | (~["*","/"] (~["*"])* "*"))* "/">
| <MULTI_LINE_COMMENT: "/*" (~["*"])* "*" ("*" | (~["*","/"] (~["*"])* "*"))* "/">
}

TOKEN :
{
  < LPAREN: "(" >
| < RPAREN: ")" >
| < LSQPAREN: "[" >
| < RSQPAREN: "]" >
| < LBRACE: "{" >
| < RBRACE: "}" >
| < SEMICOLON: ";" >
| < DOT: "." >
| < ASSIGN: "=" >
| < NE: "!=" >
| < INCREMENT: "++" >
| < PLUS: "+" >
| < MINUS: "-" >
| < MULTIPLY: "*" >
| < DIVIDE: "/" > 
| < AND : "&&" >
| < CLASS: "class" >
| < ELSE: "else" >
| < FALSE: "false" >
| < OR: "||" >
| < LTE: "<=" >
| < IF: "if" >
| < WHILE: "while" >
| < FOR: "for" >
| < INTEGER: "int" >
| < FLOAT: "float" >
| < LENGTH: "length" >
| < BOOLEAN: "boolean" >
| < MAIN: "main" >
| < NEW: "new" >
| < PUBLIC: "public" >
| < RETURN: "return" >
| < STATIC: "static" >
|  < INHERITANCE: "extends" >
| < STRING: "String" >
| < THIS: "this" >
| < TRUE: "true" >
| < PRINT: "System.out.println" >
| < VOID: "void" >
}

TOKEN : /* LITERALS */
{
  < INTEGER_LITERAL: ( ["1"-"9"] (["0"-"9"])* | "0" ) >
  |
  < FLOAT_LITERAL:
      (["0"-"9"])+ "." (["0"-"9"])* (<EXPONENT>)? (["f","F","d","D"])?
    | "." (["0"-"9"])+ (<EXPONENT>)? (["f","F","d","D"])?
    | (["0"-"9"])+ <EXPONENT> (["f","F","d","D"])?
    | (["0"-"9"])+ (<EXPONENT>)? ["f","F","d","D"]
  >
  |
  < #EXPONENT: ["e","E"] (["+","-"])? (["0"-"9"])+ >
  
}

TOKEN : /* IDENTIFIERS */
{
  < IDENTIFIER: <LETTER> (<LETTER>|<DIGIT>)* >
|
  < #LETTER:
      [
       "\u0024",
       "\u0041"-"\u005a",
       "\u005f",
       "\u0061"-"\u007a",
       "\u00c0"-"\u00d6",
       "\u00d8"-"\u00f6",
       "\u00f8"-"\u00ff",
       "\u0100"-"\u1fff",
       "\u3040"-"\u318f",
       "\u3300"-"\u337f",
       "\u3400"-"\u3d2d",
       "\u4e00"-"\u9fff",
       "\uf900"-"\ufaff"
      ]
  >
|
  < #DIGIT:
      [
       "\u0030"-"\u0039",
       "\u0660"-"\u0669",
       "\u06f0"-"\u06f9",
       "\u0966"-"\u096f",
       "\u09e6"-"\u09ef",
       "\u0a66"-"\u0a6f",
       "\u0ae6"-"\u0aef",
       "\u0b66"-"\u0b6f",
       "\u0be7"-"\u0bef",
       "\u0c66"-"\u0c6f",
       "\u0ce6"-"\u0cef",
       "\u0d66"-"\u0d6f",
       "\u0e50"-"\u0e59",
       "\u0ed0"-"\u0ed9",
       "\u1040"-"\u1049"
      ]
  >
}

/*************************************
 * The PoohJ Grammar Starts Here *
 *************************************/

void Goal() :
{}
{

  MainClass()
  ( TypeDeclaration() )*
  <EOF>
}

void MainClass() :
{}
{
  "class" Identifier() "{"
    "public" "static" "void" "main" "(" "String" "[" "]" Identifier() ")"
    "{" PrintStatement() "}"
  "}"
}

void TypeDeclaration() :
{}
{ 
  LOOKAHEAD(4) 
  InheritanceDeclaration()
  |
  LOOKAHEAD(3)
  ClassDeclaration()

}

void InheritanceDeclaration() :
{}
{
  "class" Identifier() "extends" Identifier() "{"  "}"
}


void ClassDeclaration() :
{}
{
  "class" Identifier() "{"
                           ( MethodDeclaration() )*
                       "}"
}


void VarDeclaration() :
{}
{
  Type() Identifier() ";"
}

void MethodDeclaration() :
{}
{
  "public" Type() Identifier()
  "(" ( FormalParameterList() )? ")"
  "{" ( LOOKAHEAD(2) VarDeclaration() )*
      ( Statement() )* "return" Expression() ";" "}"
}

void FormalParameterList() :
{}
{
  FormalParameter() ( FormalParameterRest() )*
}

void FormalParameter() :
{}
{
  Type() Identifier()
}

void FormalParameterRest() :
{}
{
  "," FormalParameter()
}

void Type() :
{}
{
  LOOKAHEAD(3)
  ArrayType()
|
  IntegerType()
|
  BooleanType()
|
  FloatType()
|
  Identifier()
}

void ArrayType() :
{}
{
  "int" "[" "]"
}

void IntegerType() :
{}
{
  "int"
}

void BooleanType() :
{}
{
  "boolean"
}

void FloatType() :
{}
{
  "float"
}

void Statement() :
{}
{
  Block()
|
  LOOKAHEAD(10)
  AssignmentStatement()
|
  LOOKAHEAD(10)
  ArrayAssignmentStatement()
|
  LOOKAHEAD(10)
  ArrayLookup()
|
  IfStatement()
|
  WhileStatement()
|
  LOOKAHEAD( "for" "(" )
  ForStatement()
|
  PrintStatement()
}

void Block() :
{}
{
  "{" ( Statement() )* "}"
}

void AssignmentStatement() :
{}
{
  Identifier() "=" Expression() (LOOKAHEAD(2) ";")*
}

void ArrayAssignmentStatement() :
{}
{
  Identifier() "[" Expression() "]" "=" Expression() (LOOKAHEAD(2) ";")*
}

void ArrayLookup() :
{}
{
  Identifier() "[" Identifier() "]" (LOOKAHEAD(2) ";")*
}



void IfStatement() :
{}
{
  // Add if-then stmt as well
  LOOKAHEAD(IfthenElseStatement()) IfthenElseStatement()
  | IfthenStatement()
}
void IfthenStatement() :
{}
{
  "if" "(" Expression() ")" Statement()
}
void IfthenElseStatement() :
{}
{
  "if" "(" Expression() ")" Statement() "else" Statement()
}
void WhileStatement() :
{}
{
  "while" "(" Expression() ")" Statement()
}
void ForStatement() :
{}
{
  "for" "(" Type() Identifier() "=" Expression() ";" Expression() ";" Identifier() "++" ")" "{"  (Statement())*  "}" 
}
void PrintStatement() :
{}
{
  "System.out.println" "(" Expression() ")" ";"
}

void Expression() :
{}
{
  LOOKAHEAD( PrimaryExpression() "&&" )
  AndExpression()
|
  LOOKAHEAD( PrimaryExpression() "!=" )
  NeqExpression()
|
  LOOKAHEAD( PrimaryExpression() "+" )
  PlusExpression()
|
  LOOKAHEAD( PrimaryExpression() "-" )
  MinusExpression()
|
  LOOKAHEAD( PrimaryExpression() "*" )
  MultiplyExpression()
|
  LOOKAHEAD( PrimaryExpression() "/" )
  DivideExpression()
|  
  LOOKAHEAD( PrimaryExpression() "||" )
  OrExpression()
|
  LOOKAHEAD( PrimaryExpression() "<=" )
  CompareExpression()
|
  LOOKAHEAD( PrimaryExpression() "." Identifier() "(" )
  MessageSend()
|
  LOOKAHEAD(50)
  LengthExpression()
|
  PrimaryExpression()
}

void AndExpression() :
{}
{
  PrimaryExpression() "&&" PrimaryExpression()
}

void NeqExpression() :
{}
{
  PrimaryExpression() "!=" PrimaryExpression()
}

void PlusExpression() :
{}
{
  PrimaryExpression() "+" PrimaryExpression()
}

void MinusExpression() :
{}
{
  PrimaryExpression() "-" PrimaryExpression()
}

void MultiplyExpression() :
{}
{
  PrimaryExpression() "*" PrimaryExpression()
}

void DivideExpression() :
{}
{
  PrimaryExpression() "/" PrimaryExpression()
}

void OrExpression() :
{}
{
  PrimaryExpression() "||" PrimaryExpression()
}

void CompareExpression() :
{}
{
  PrimaryExpression() "<=" PrimaryExpression()
}

void MessageSend() :
{}
{
  PrimaryExpression() "." Identifier()
  "(" ( ExpressionList() )? ")"
}
void LengthExpression() :
{}
{
  PrimaryExpression() "." "length"
}
void ExpressionList() :
{}
{
  Expression() ( ExpressionRest() )*
}

void ExpressionRest() :
{}
{
  "," Expression()
}

void PrimaryExpression() :
{}
{
  LOOKAHEAD(3)
  IntegerLiteral()
|
  FloatLiteral()
|
  TrueLiteral()
|
  FalseLiteral()
|
  LOOKAHEAD(3)
  Identifier()
|
  ThisExpression()
|
  LOOKAHEAD(3)
  ArrayAllocationExpression()
|
  AllocationExpression()
|
  NotExpression()
|
  BracketExpression()
}

void IntegerLiteral() :
{}
{
  <INTEGER_LITERAL>
  |
  Statement()
}

void FloatLiteral() :
{}
{
  <FLOAT_LITERAL>
}


void TrueLiteral() :
{}
{
  "true"
}

void FalseLiteral() :
{}
{
  "false"
}

void Identifier() :
{}
{
  <IDENTIFIER>
}

void ThisExpression() :
{}
{
  "this"
}

void ArrayAllocationExpression() :
{}
{
  "new" "int" "[" Expression() "]"
}

void AllocationExpression() :
{}
{
  "new" Identifier() "(" ")"
}

void NotExpression() :
{}
{
  "!" Expression()
}

void BracketExpression() :
{}
{
  "(" Expression() ")"
}


void IdentifierList() :
{}
{
  Identifier() ( IdentifierRest() )*
}

void IdentifierRest() :
{}
{
  "," Identifier()
}
